--- a/pages/index.css
+++ b/pages/index.css
@@ -11,4 +11,90 @@
 div {
   border: 2px red solid;
 }
+.lead {
+  width: 984px;
+  margin-left: 148px;
+  margin-right: 148px;
+  align-items: center;
+}
 
+.lead__title {
+  width: 720px;
+  font-family: "Inter-ExtraBold";
+  font-weight: 900;
+  font-size: 96px;
+  line-height: 100px;
+  text-align: center;
+  color: #ffffff;
+  margin: 0 auto;
+  padding-top: 56px;
+}
+.lead__subtitle {
+  width: 640px;
+  font-family: "Inter";
+  font-weight: 400;
+  font-size: 30px;
+  line-height: 36px;
+  text-align: center;
+  color: #ffffff;
+  margin: 0 auto;
+  padding-top: 32px;
+}
+
+.lead__image {
+  width: 984px;
+  padding-top: 64px;
+}
+
+.lead__caption {
+  font-family: "Inter";
+  font-style: normal;
+  font-weight: 400;
+  font-size: 10px;
+  line-height: 14px;
+  letter-spacing: 1.5px;
+  text-transform: uppercase;
+  color: #ffffff;
+  margin: 0;
+}
+
+.intro {
+  width: 690px;
+  margin-left: 148px;
+  margin-right: 442px;
+}
+
+.intro__title {
+  font-family: "Inter-ExtraBold";
+  font-style: normal;
+  font-weight: 900;
+  font-size: 54px;
+  line-height: 58px;
+  color: #ffffff;
+  margin: 0;
+  padding-top: 92px;
+}
+
+.intro__text {
+  font-family: "Inter";
+  font-style: normal;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 163%;
+  color: #ffffff;
+  margin: 0;
+  padding-top: 40px;
+}
+
+.intro__list {
+  font-family: "Inter";
+  font-style: normal;
+  font-weight: 700;
+  font-size: 12px;
+  line-height: 18px;
+  color: #ffffff;
+  list-style-type:none;
+  padding-left: 0;
+  padding-top: 33px;
+  margin: 0;
+}
