--- a/blocks/cover/__title/cover__title.css
+++ b/blocks/cover/__title/cover__title.css
@@ -1,9 +1,10 @@
 .cover__title {
   max-width: 560px;
-  font-family: "Inter-ExtraBold";
+  font-family: 'Inter-ExtraBold';
   font-size: 72px;
   line-height: 76px;
   text-align: center;
   color: #ffffff;
   margin: 0;
+  text-decoration: none;
 }
