--- a/pages/index.css
+++ b/pages/index.css
@@ -31,84 +31,20 @@
 @import url(../blocks/footer/__link/footer__link.css);
 @import url(../blocks/footer/__copyrite/footer__copyrite.css);
 
+@import url(../blocks/places/places.css);
+
+@import url(../blocks/place/place.css);
+@import url(../blocks/place/__title/place__title.css);
+@import url(../blocks/place/__image/place__image.css);
+@import url(../blocks/place/__url/place__url.css);
+@import url(../blocks/place/__url-heading/place__url-heading.css);
+@import url(../blocks/place/__link/place__link.css);
+@import url(../blocks/place/__text/place__text.css);
+@import url(../blocks/place/__paragraph/place__paragraph.css);
+
+
+
 div {
   border: 2px red solid;
 }
 
-.places {
-  max-width: 984px;
-  padding-top: 92px;
-  margin: 0 auto;
-}
-.place {
-  display: grid;
-  grid-template-columns: 460px auto;
-  grid-gap: 48px;
-  padding-top: 80px;
-}
-
-.place:first-child {
-  padding-top:0px;
-}
-
-.place__title {
-  font-family: 'Inter-ExtraBold';
-  font-style: normal;
-  font-weight: 900;
-  font-size: 72px;
-  line-height: 76px;
-  color: #ffffff;
-  margin: 0;
-}
-.place__image {
-  max-width: 460px;
-  background-position: cover;
-}
-.place__url {
-  display: flex;
-  justify-content: flex-end;
-  flex-direction: column;
-}
-.place__url-heading {
-  font-family: "Inter";
-  font-style: normal;
-  font-weight: 400;
-  font-size: 12px;
-  line-height: 12px;
-  letter-spacing: 2px;
-  color: #aaaaaa;
-  margin: 0;
-}
-.place__link {
-  font-family: "Inter";
-  font-style: normal;
-  font-weight: 400;
-  font-size: 18px;
-  line-height: 22px;
-  text-decoration-line: underline;
-  color: #ffffff;
-  padding-top: 12px;
-}
-.place__link:hover {
-  opacity: 0.5;
-}
-
-.place__text {
-  display: flex;
-  flex-direction: column;
-}
-
-.place__paragraph {
-  width: 100%;
-  font-family: "Inter";
-  font-style: normal;
-  font-weight: 400;
-  font-size: 18px;
-  line-height: 163%;
-  color: #ffffff;
-  margin: 0;
-  padding-top: 26px;
-}
-.place__paragraph:first-child {
-  padding-top: 0px;
-}
