--- a/blocks/cover/__title/cover__title.css
+++ b/blocks/cover/__title/cover__title.css
@@ -1,5 +1,6 @@
 .cover__title {
   max-width: 560px;
+  width: 100%;
   font-family: 'Inter-ExtraBold';
   font-size: 72px;
   line-height: 76px;
@@ -7,4 +8,5 @@
   color: #ffffff;
   margin: 0;
   text-decoration: none;
+  z-index: 1;
 }
