--- a/blocks/cover/__title/cover__title.css
+++ b/blocks/cover/__title/cover__title.css
@@ -1,12 +1,13 @@
 .cover__title {
+  margin: 0;
+  position: relative;
   max-width: 560px;
-  width: 100%;
   font-family: 'Inter-ExtraBold';
   font-size: 72px;
   line-height: 76px;
   text-align: center;
   color: #ffffff;
-  margin: 0;
   text-decoration: none;
   z-index: 1;
+  justify-content: center;
 }
