--- a/blocks/footer/__link/footer__link.css
+++ b/blocks/footer/__link/footer__link.css
@@ -5,7 +5,8 @@
   line-height: 18px;
   color: #ffffff;
   text-decoration: none;
-  padding-left: 18px;
+  margin: 0;
+  margin-left: 18px;
 }
 
 .footer__link:hover {
@@ -13,5 +14,19 @@
 }
 
 .footer__link:first-child {
-  padding-left: 0px;
+  margin-left: 0px;
+}
+
+.footer__link:last-child {
+  margin-bottom: 0;
+  margin-bottom: 48px;
+}
+
+@media screen and (min-width: 320px) and (max-width: 767px) {
+  .footer__link {
+      margin-bottom: 32px;
+      margin-left: 0;
+      font-size: 24px;
+      line-height: 24px;
+  }
 }
