--- a/blocks/footer/__links/footer__links.css
+++ b/blocks/footer/__links/footer__links.css
@@ -1,3 +1,10 @@
 .footer__links {
   margin: 0;
 }
+
+@media screen and (min-width: 320px) and (max-width: 767px) {
+  .footer__menu {
+    display: flex;
+    flex-direction: column;
+  }
+}
