--- a/blocks/footer/footer.css
+++ b/blocks/footer/footer.css
@@ -1,8 +1,35 @@
 .footer {
   max-width: 1184px;
-  margin: 0 auto;
   display: flex;
   justify-content: space-between;
   padding-bottom: 24px;
   padding-top: 92px;
+  padding-right: 48px;
+  padding-left: 48px;
+}
+
+@media screen and (max-width: 1023px) {
+  .footer {
+    padding: 0;
+    padding-left: 24px;
+    padding-right: 24px;
+  }
+}
+
+@media screen and (max-width: 768px) {
+  .footer {
+    max-width: 720px;
+  }
+}
+
+@media screen and (min-width: 320px) and (max-width: 767px) {
+  .footer {
+    margin: 64px auto 24px 16px;
+    padding: 0;
+    display: flex;
+    flex-direction: column;
+    align-items: start;
+    justify-content: space-between;
+    max-width: 186px;
+  }
 }
