--- a/blocks/header/__logo-link/header__logo-link.css
+++ b/blocks/header/__logo-link/header__logo-link.css
@@ -14,3 +14,11 @@
 .header__lang-link:last-child {
   padding-left: 18px;
 }
+
+@media screen and (max-width: 768px) {
+  .header__lang-link {
+    max-width: 22px;
+    line-height: 20px;
+    font-size: 18px;
+  }
+}
