--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -2,9 +2,21 @@
   display: flex;
   max-width: 100%;
   justify-content: space-between;
-  margin-left: 48px;
-  margin-right: 48px;
   padding-top: 28px;
+  margin: 0 48px;
   align-items: center;
   align-self: center;
+}
+
+@media screen and (max-width: 1024px) {
+  .header {
+    margin: 0 24px;
+  }
+}
+
+@media screen and (max-width: 768px) {
+  .header {
+    margin: 0 16px;
+    padding-top: 16px;
+  }
 }
