--- a/blocks/intro/__text/intro__text.css
+++ b/blocks/intro/__text/intro__text.css
@@ -8,3 +8,15 @@
   margin: 0;
   padding-top: 40px;
 }
+
+@media screen and (min-width: 1024px) and (max-width: 1279px) {
+  .intro__text {
+    max-width: 690px;
+  }
+}
+
+@media screen and (min-width: 768px) and (max-width: 1023px) {
+  .intro__text {
+    max-width: 720px;
+  }
+}
