--- a/blocks/intro/__title/intro__title.css
+++ b/blocks/intro/__title/intro__title.css
@@ -1,10 +1,29 @@
 .intro__title {
   font-family: "Inter-ExtraBold";
   font-style: normal;
-  font-weight: 900;
   font-size: 54px;
   line-height: 58px;
   color: #ffffff;
   margin: 0;
   padding-top: 92px;
+}
+
+@media screen and (min-width: 1024px) and (max-width: 1279px) {
+  .intro__title {
+    padding-top: 88px;
+  }
+}
+
+@media screen and (min-width: 768px) and (max-width: 1023px) {
+  .intro__title {
+    padding-top: 64px;
+  }
+}
+
+@media screen and (min-width: 320px) and (max-width: 767px) {
+  .intro__title {
+    padding-top: 64px;
+    font-size: 32px;
+    line-height: 35px;
+  }
 }
