--- a/blocks/intro/intro.css
+++ b/blocks/intro/intro.css
@@ -2,3 +2,24 @@
   margin-left: 148px;
   margin-right: 442px;
 }
+
+@media screen and (min-width: 1024px) and (max-width: 1279px) {
+  .intro {
+    margin-left: 92px;
+    margin-right: 286px;
+  }
+}
+
+@media screen and (min-width: 768px) and (max-width: 1023px) {
+  .intro {
+    margin-left: 24px;
+    margin-right: 24px;
+  }
+}
+
+@media screen and (min-width: 320px) and (max-width: 767px) {
+  .intro {
+    margin-left: 16px;
+    margin-right: 16px;
+  }
+}
