--- a/blocks/lead/__caption/lead__caption.css
+++ b/blocks/lead/__caption/lead__caption.css
@@ -1,11 +1,21 @@
 .lead__caption {
   font-family: "Inter";
   font-style: normal;
-  font-weight: 400;
   font-size: 10px;
   line-height: 14px;
   letter-spacing: 1.5px;
   text-transform: uppercase;
   color: #ffffff;
   margin: 0;
+}
+
+@media screen and (min-width: 768px) and (max-width: 1024px) {
+  .lead__caption {
+    margin-left: 24px;
+  }
+}
+@media screen and (min-width: 320px) and (max-width: 768px) {
+  .lead__caption {
+    margin-left: 16px;
+  }
 }
