--- a/blocks/lead/__image/lead__image.css
+++ b/blocks/lead/__image/lead__image.css
@@ -1,5 +1,20 @@
 .lead__image {
+  max-width: 984px;
   max-width: 100%;
   padding-top: 64px;
   display: block;
+}
+
+@media screen and (max-width: 1024px) {
+  .lead__image {
+    margin-top: 0;
+    padding-top: 56px;
+    max-width: 100%;
+  }
+}
+
+@media screen and (max-width: 320px) {
+  .lead__image {
+    padding-top: 40px;
+  }
 }
