--- a/blocks/lead/__subtitle/lead__subtitle.css
+++ b/blocks/lead/__subtitle/lead__subtitle.css
@@ -1,5 +1,5 @@
 .lead__subtitle {
-  width: 640px;
+  max-width: 640px;
   font-family: "Inter";
   font-weight: 400;
   font-size: 30px;
@@ -8,4 +8,14 @@
   color: #ffffff;
   margin: 0 auto;
   padding-top: 32px;
+  text-align: center;
+}
+
+@media screen and (max-width: 768px) {
+  .lead__subtitle {
+    padding-top: 16px;
+    font-size: 16px;
+    line-height: 20px;
+    margin: 0;
+  }
 }
