--- a/blocks/lead/__title/lead__title.css
+++ b/blocks/lead/__title/lead__title.css
@@ -1,11 +1,32 @@
 .lead__title {
-  width: 720px;
+  max-width: 720px;
   font-family: 'Inter-ExtraBold';
-  font-weight: 900;
   font-size: 96px;
   line-height: 100px;
   text-align: center;
   color: #ffffff;
   margin: 0 auto;
   padding-top: 56px;
+  text-align: center;
+}
+
+@media screen and (max-width: 1024px) {
+  .lead__title {
+    padding-top: 48px;
+  }
+}
+
+@media screen and (min-width: 768px) and (max-width: 1279px) {
+  .lead__title {
+    max-width: 720px;
+  }
+}
+
+@media screen and (max-width: 767px) {
+  .lead__title {
+    margin: 0 16px;
+    font-size: 40px;
+    line-height: 44px;
+    
+  }
 }
