--- a/blocks/lead/lead.css
+++ b/blocks/lead/lead.css
@@ -1,6 +1,11 @@
 .lead {
   max-width: 984px;
-  margin-left: 148px;
-  margin-right: 148px;
+  margin: 0 auto;
   align-items: center;
+}
+
+@media screen and (max-width: 1024px) {
+  .lead {
+    max-width: 928px;
+  }
 }
