--- a/blocks/place/__image/place__image.css
+++ b/blocks/place/__image/place__image.css
@@ -2,3 +2,21 @@
   max-width: 460px;
   background-position: cover;
 }
+
+@media screen and (min-width: 1024px) and (max-width: 1279px) {
+  .place__image {
+    max-width: 440px;
+  }
+}
+
+@media screen and (min-width: 768px) and (max-width: 1023px) {
+  .place__image {
+    max-width: 340px;
+  }
+}
+
+@media screen and (min-width: 320px) and (max-width: 767px) {
+  .place__image {
+    max-width: 320px;
+  }
+}
