--- a/blocks/place/__paragraph/place__paragraph.css
+++ b/blocks/place/__paragraph/place__paragraph.css
@@ -2,7 +2,6 @@
   width: 100%;
   font-family: "Inter";
   font-style: normal;
-  font-weight: 400;
   font-size: 18px;
   line-height: 163%;
   color: #ffffff;
@@ -12,4 +11,18 @@
 
 .place__paragraph:first-child {
   padding-top: 0px;
+
+}
+@media screen and (min-width: 1024px) {
+  .place__paragraph {
+    font-size: 18px;
+    line-height: 163%;
+  }
+}
+
+@media screen and (min-width: 320px) {
+  .place__paragraph {
+    font-size: 16px;
+    line-height: 163%;
+  }
 }
