--- a/blocks/place/__text/place__text.css
+++ b/blocks/place/__text/place__text.css
@@ -2,3 +2,15 @@
   display: flex;
   flex-direction: column;
 }
+
+@media screen and (min-width: 768px) {
+  .place__text {
+    padding: 0;
+  }
+}
+
+@media screen and (min-width: 320px) {
+  .place__text {
+    padding: 0 16px;
+  }
+}
