--- a/blocks/place/__title/place__title.css
+++ b/blocks/place/__title/place__title.css
@@ -1,9 +1,37 @@
 .place__title {
-  font-family: 'Inter-ExtraBold';
+  max-width: 460px;
+  font-family: "Inter-ExtraBold";
   font-style: normal;
-  font-weight: 900;
   font-size: 72px;
   line-height: 76px;
   color: #ffffff;
   margin: 0;
+}
+
+@media screen and (min-width: 1024px) {
+  .place__title {
+    font-size: 72px;
+    line-height: 76px;
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .place__title {
+    padding: 0;
+  }
+}
+
+@media screen and (min-width: 425px) {
+  .place__title {
+    font-size: 42px;
+    line-height: 46px;
+  }
+}
+
+@media screen and (min-width: 320px) {
+  .place__title {
+    font-size: 32px;
+    line-height: 35px;
+    padding: 0 16px;
+  }
 }
