--- a/blocks/place/__url/place__url.css
+++ b/blocks/place/__url/place__url.css
@@ -3,3 +3,15 @@
   justify-content: flex-end;
   flex-direction: column;
 }
+
+@media screen and (min-width: 768px) {
+  .place__url {
+    padding: 0;
+  }
+}
+
+@media screen and (min-width: 320px) {
+  .place__url {
+    padding: 0 16px;
+  }
+}
