--- a/blocks/footer/__link/footer__link.css
+++ b/blocks/footer/__link/footer__link.css
@@ -1,32 +1,21 @@
 .footer__link {
-  font-family: "Inter";
-  font-weight: 400;
+  font-family: 'Inter';
   font-size: 16px;
   line-height: 18px;
-  color: #ffffff;
-  text-decoration: none;
+  padding: 0;
   margin: 0;
-  margin-left: 18px;
+  transition: opacity 0.3s ease;
+  text-decoration: none;
+  color: white;
 }
 
 .footer__link:hover {
-  opacity: 0.5;
+  opacity: 0.6;
 }
 
-.footer__link:first-child {
-  margin-left: 0px;
-}
-
-.footer__link:last-child {
-  margin-bottom: 0;
-  margin-bottom: 48px;
-}
-
-@media screen and (min-width: 320px) and (max-width: 767px) {
+@media screen and (max-width: 767px) {
   .footer__link {
-      margin-bottom: 32px;
-      margin-left: 0;
-      font-size: 24px;
-      line-height: 24px;
+    line-height: 24px;
+    font-size: 24px; 
   }
 }
