--- a/blocks/footer/__links/footer__links.css
+++ b/blocks/footer/__links/footer__links.css
@@ -1,10 +1,25 @@
 .footer__links {
+  max-width: 1184px;
+  list-style: none;
+  display: flex;
+  padding: 0;
   margin: 0;
 }
 
-@media screen and (min-width: 320px) and (max-width: 767px) {
-  .footer__menu {
-    display: flex;
+@media screen and (min-width: 1024px) and (max-width: 1279px) {
+  .footer__links {
+    max-width: 928px;
+  }
+}
+
+@media screen and (min-width: 768px) and (max-width: 1023px) {
+  .footer__links {
+    max-width: 720px;
+  }
+}
+
+@media screen and (max-width: 767px) {
+  .footer__links {
     flex-direction: column;
   }
 }
