--- a/blocks/footer/footer.css
+++ b/blocks/footer/footer.css
@@ -1,35 +1,20 @@
 .footer {
-  max-width: 1184px;
   display: flex;
+  margin: 0 auto;
+  padding: 92px 48px 24px;
   justify-content: space-between;
-  padding-bottom: 24px;
-  padding-top: 92px;
-  padding-right: 48px;
-  padding-left: 48px;
+  color: white;
 }
 
-@media screen and (max-width: 1023px) {
+@media screen and (min-width: 768px) and (max-width: 1023px) {
   .footer {
-    padding: 0;
-    padding-left: 24px;
-    padding-right: 24px;
+    padding: 88px 24px 24px;
   }
 }
 
-@media screen and (max-width: 768px) {
+@media screen and (max-width: 767px) {
   .footer {
-    max-width: 720px;
-  }
-}
-
-@media screen and (min-width: 320px) and (max-width: 767px) {
-  .footer {
-    margin: 64px auto 24px 16px;
-    padding: 0;
-    display: flex;
+    padding: 64px 118px 24px 16px;
     flex-direction: column;
-    align-items: start;
-    justify-content: space-between;
-    max-width: 186px;
   }
 }
