--- a/blocks/cover/__image/cover__image.css
+++ b/blocks/cover/__image/cover__image.css
@@ -13,6 +13,7 @@
   flex-direction: column;
   align-items: center;
   z-index: 1;
+  width: 100%;
   text-decoration: none;
 }
 
@@ -31,4 +32,22 @@
 
 .cover__image:hover:before {
   opacity: 0.6;
+}
+
+@media screen and (min-width: 1024px) and (max-width: 1279px) {
+  .cover__link {
+    min-height: 640px;
+  }
+}
+
+@media screen and (min-width: 768px) and (max-width: 1023px) {
+  .cover__link {
+    min-height: 480px;
+  }
+}
+
+@media screen and (max-width: 767px) {
+  .cover__link {
+    min-height: 200px;
+  }
 }
