--- a/blocks/cover/__subtitle/cover__subtitle.css
+++ b/blocks/cover/__subtitle/cover__subtitle.css
@@ -1,10 +1,19 @@
 .cover__subtitle {
   max-width: 360px;
+  padding: 0;
   font-family: "Inter";
   font-size: 18px;
   line-height: 22px;
   text-align: center;
   color: #ffffff;
   padding-top: 32px;
-  margin: 0;
+  margin: 0 auto;
+}
+
+@media screen and (max-width: 767px) {
+  .cover__subtitle {
+    min-width: 288px;
+    font-size: 14px;
+    line-height: 16px;
+  }
 }
