--- a/blocks/lead/__subtitle/lead__subtitle.css
+++ b/blocks/lead/__subtitle/lead__subtitle.css
@@ -6,16 +6,22 @@
   line-height: 36px;
   text-align: center;
   color: #ffffff;
-  margin: 0 auto;
-  padding-top: 32px;
+  margin: 32px auto 64px;
   text-align: center;
 }
 
-@media screen and (max-width: 768px) {
+@media screen and (min-width: 768px) and (max-width: 1279px) {
   .lead__subtitle {
-    padding-top: 16px;
+    margin: 32px auto 56px;
+  }
+}
+
+@media screen and (max-width: 767px) {
+  .lead__subtitle {
+    min-width: 288px;
+    padding: 0 16px;
     font-size: 16px;
     line-height: 20px;
-    margin: 0;
+    margin: 16px auto 40px;
   }
 }
