--- a/blocks/lead/__title/lead__title.css
+++ b/blocks/lead/__title/lead__title.css
@@ -24,6 +24,7 @@
 
 @media screen and (max-width: 767px) {
   .lead__title {
+    min-width: 288px;
     margin: 0 16px;
     font-size: 40px;
     line-height: 44px;
