--- a/blocks/lead/lead.css
+++ b/blocks/lead/lead.css
@@ -4,8 +4,16 @@
   align-items: center;
 }
 
-@media screen and (max-width: 1024px) {
+@media screen and (min-width: 1024px) and (max-width: 1279px) {
   .lead {
     max-width: 928px;
+    padding-left: 48px;
+    padding-right: 48px;
+  }
+}
+
+@media screen and (max-width: 767px) {
+  .lead {
+    min-width: 320px;
   }
 }
