--- a/blocks/place/__title/place__title.css
+++ b/blocks/place/__title/place__title.css
@@ -1,5 +1,4 @@
 .place__title {
-  max-width: 460px;
   font-family: "Inter-ExtraBold";
   font-style: normal;
   font-size: 72px;
@@ -8,27 +7,14 @@
   margin: 0;
 }
 
-@media screen and (min-width: 1024px) {
-  .place__title {
-    font-size: 72px;
-    line-height: 76px;
-  }
-}
-
-@media screen and (min-width: 768px) {
-  .place__title {
-    padding: 0;
-  }
-}
-
-@media screen and (min-width: 425px) {
+@media screen and (min-width: 768px) and (max-width: 1023px) {
   .place__title {
     font-size: 42px;
     line-height: 46px;
   }
 }
 
-@media screen and (min-width: 320px) {
+@media screen and (max-width: 767px) {
   .place__title {
     font-size: 32px;
     line-height: 35px;
