--- a/blocks/place/place.css
+++ b/blocks/place/place.css
@@ -1,10 +1,33 @@
 .place {
   display: grid;
-  grid-template-columns: 460px auto;
-  grid-gap: 48px;
-  padding-top: 80px;
+  grid-template-columns: 460px 1fr;
+  grid-gap: 48px 40px;
+  padding-top: 40px;
 }
 
 .place:first-child {
   padding-top: 0px;
+}
+
+@media screen and (min-width: 1024px) and (max-width: 1279px) {
+  .place {
+    grid-template-columns: 440px 1fr;
+    gap: 48px 32px;
+  }
+}
+
+@media screen and (min-width: 768px) and (max-width: 1023px) {
+  .place {
+    grid-template-columns: 340px 1fr;
+    padding-top: 36px;
+    gap: 48px 28px;
+  }
+}
+
+@media screen and (max-width: 767px) {
+  .place {
+    grid-template-columns: minmax(288px, 1fr);
+    padding-top: 25px;
+    gap: 32px;
+  }
 }
