--- a/blocks/places/places.css
+++ b/blocks/places/places.css
@@ -4,21 +4,19 @@
   margin: 0 auto;
 }
 
-@media screen and (max-width: 1100px) {
+@media screen and (min-width: 1024px) and (max-width: 1279px) {
   .places {
     max-width: 928px;
   }
 }
 
-@media screen and (max-width: 928px) {
+@media screen and (min-width: 768px) and (max-width: 1023px) {
   .places {
     max-width: 720px;
-    padding-top: 88px;
-    margin: 0 auto;
   }
 }
 
-@media screen and (max-width: 720px) {
+@media screen and (max-width: 767px) {
   .places {
     max-width: 320px;
     padding-top: 64px;
