--- a/blocks/page/page.css
+++ b/blocks/page/page.css
@@ -1,4 +1,10 @@
 .page {
     background-color: #2A2C2F;
+    max-width: 1280px;
+    min-width: 320px;
+    -ms-text-size-adjust: 100%;
+    -moz-osx-font-smoothing: grayscale;
+    -webkit-font-smoothing: antialiased;
+    text-rendering: optimizeLegibility;
 }
 
