--- a/blocks/cover/__subtitle/cover__subtitle.css
+++ b/blocks/cover/__subtitle/cover__subtitle.css
@@ -1,7 +1,7 @@
 .cover__subtitle {
   max-width: 360px;
   padding: 0;
-  font-family: "Inter";
+  font-weight: 400;
   font-size: 18px;
   line-height: 22px;
   text-align: center;
