--- a/blocks/cover/__title/cover__title.css
+++ b/blocks/cover/__title/cover__title.css
@@ -3,7 +3,7 @@
   position: relative;
   padding: 0;
   max-width: 560px;
-  font-family: 'Inter-ExtraBold';
+  font-weight: 900;
   font-size: 72px;
   line-height: 76px;
   text-align: center;
