--- a/blocks/header/__logo-link/header__logo-link.css
+++ b/blocks/header/__logo-link/header__logo-link.css
@@ -1,7 +1,7 @@
 .header__lang-link {
   color: white;
   align-items: center;
-  font-family: "Inter";
+  font-weight: 400;
   font-style: normal;
   font-size: 24px;
   line-height: 28px;
