--- a/blocks/intro/__list/intro__list.css
+++ b/blocks/intro/__list/intro__list.css
@@ -1,6 +1,5 @@
 .intro__list {
-  font-family: 'Inter-Bold';
-  font-style: normal;
+  font-weight: 400;
   font-size: 12px;
   line-height: 18px;
   color: #ffffff;
