--- a/blocks/intro/__title/intro__title.css
+++ b/blocks/intro/__title/intro__title.css
@@ -1,6 +1,5 @@
 .intro__title {
-  font-family: "Inter-ExtraBold";
-  font-style: normal;
+  font-weight: 900;
   font-size: 54px;
   line-height: 58px;
   color: #ffffff;
