--- a/blocks/lead/__title/lead__title.css
+++ b/blocks/lead/__title/lead__title.css
@@ -1,6 +1,6 @@
 .lead__title {
   max-width: 720px;
-  font-family: 'Inter-ExtraBold';
+  font-weight: 900;
   font-size: 96px;
   line-height: 100px;
   text-align: center;
@@ -28,6 +28,5 @@
     margin: 0 16px;
     font-size: 40px;
     line-height: 44px;
-    
   }
 }
