--- a/blocks/place/__paragraph/place__paragraph.css
+++ b/blocks/place/__paragraph/place__paragraph.css
@@ -1,7 +1,6 @@
 .place__paragraph {
   width: 100%;
-  font-family: "Inter";
-  font-style: normal;
+  font-weight: 400;
   font-size: 18px;
   line-height: 163%;
   color: #ffffff;
