--- a/blocks/place/__title/place__title.css
+++ b/blocks/place/__title/place__title.css
@@ -1,6 +1,5 @@
 .place__title {
-  font-family: "Inter-ExtraBold";
-  font-style: normal;
+  font-weight: 900;
   font-size: 72px;
   line-height: 76px;
   color: #ffffff;
