--- a/pages/index.css
+++ b/pages/index.css
@@ -1,5 +1,6 @@
-@import url(../vendor/fonts.css);
 @import url(../vendor/normalize.css);
+
+@import url(../vendor/fonts.css);
 
 @import url(../blocks/page/page.css);
 
@@ -18,12 +19,12 @@
 @import url(../blocks/intro/__title/intro__title.css);
 @import url(../blocks/intro/__text/intro__text.css);
 @import url(../blocks/intro/__list/intro__list.css);
+@import url(../blocks/intro/__list-span/intro__list-span.css);
 
 @import url(../blocks/photo-grid/photo-grid.css);
 @import url(../blocks/photo-grid/__item/photo-grid__item.css);
 
 @import url(../blocks/places/places.css);
-
 @import url(../blocks/place/place.css);
 @import url(../blocks/place/__title/place__title.css);
 @import url(../blocks/place/__image/place__image.css);
