--- a/blocks/cover/__title/cover__title.css
+++ b/blocks/cover/__title/cover__title.css
@@ -1,6 +1,5 @@
 .cover__title {
-  margin: 0 auto 32px;
-  position: relative;
+  margin: 0 auto;
   padding: 0;
   max-width: 560px;
   font-weight: 900;
@@ -16,7 +15,7 @@
 @media screen and (max-width: 767px) {
   .cover__title {
     min-width: 288px;
-    margin: 0 auto 16px;
+    margin: 0 auto;
     font-size: 32px;
     line-height: 35px;
   }
