--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -1,22 +1,27 @@
 .header {
   display: flex;
-  max-width: 100%;
+  max-width: 1184px;
   justify-content: space-between;
   padding-top: 28px;
-  margin: 0 48px;
+  padding-left: 48px;
+  padding-right: 48px;
+  margin: 0 auto;
   align-items: center;
   align-self: center;
 }
 
-@media screen and (max-width: 1024px) {
+@media screen and (min-width: 768px) and (max-width: 1023px) {
   .header {
-    margin: 0 24px;
+    padding-left: 24px;
+    padding-right: 24px;
   }
 }
 
-@media screen and (max-width: 768px) {
+@media screen and (max-width: 767px) {
   .header {
-    margin: 0 16px;
+    min-width: 288px;
     padding-top: 16px;
+    padding-left: 16px;
+    padding-right: 16px;
   }
 }
