--- a/blocks/intro/intro.css
+++ b/blocks/intro/intro.css
@@ -1,12 +1,14 @@
 .intro {
   margin-left: 148px;
   margin-right: 442px;
+  margin-top: 92px;
 }
 
 @media screen and (min-width: 1024px) and (max-width: 1279px) {
   .intro {
-    margin-left: 92px;
+    margin-left: 48px;
     margin-right: 286px;
+    margin-top: 92px;
   }
 }
 
@@ -14,6 +16,7 @@
   .intro {
     margin-left: 24px;
     margin-right: 24px;
+    margin-top: 88px;
   }
 }
 
@@ -21,5 +24,6 @@
   .intro {
     margin-left: 16px;
     margin-right: 16px;
+    margin-top: 64px;
   }
 }
