--- a/blocks/place/__text/place__text.css
+++ b/blocks/place/__text/place__text.css
@@ -1,15 +1,10 @@
 .place__text {
   display: flex;
   flex-direction: column;
+  padding: 0;
 }
 
-@media screen and (min-width: 768px) {
-  .place__text {
-    padding: 0;
-  }
-}
-
-@media screen and (min-width: 320px) {
+@media screen and (max-width: 767px) {
   .place__text {
     padding: 0 16px;
   }
