--- a/blocks/place/__url/place__url.css
+++ b/blocks/place/__url/place__url.css
@@ -2,15 +2,10 @@
   display: flex;
   justify-content: flex-end;
   flex-direction: column;
+  padding:0;
 }
 
-@media screen and (min-width: 768px) {
-  .place__url {
-    padding: 0;
-  }
-}
-
-@media screen and (min-width: 320px) {
+@media screen and (max-width: 767px) {
   .place__url {
     padding: 0 16px;
   }
