--- a/blocks/cover/__link/cover__link.css
+++ b/blocks/cover/__link/cover__link.css
@@ -1,11 +1,13 @@
 .cover__link {
+  background-image: url(./../../../images/cover-trains.jpg);
+  background-size: cover;
+  background-position: center;
   display: flex;
   max-width: 1184px;
   min-height: 740px;
   position: relative;
   margin: auto;
   margin-top: 92px;
-  display: flex;
   justify-content: center;
   flex-direction: column;
   align-items: center;
@@ -14,13 +16,11 @@
   text-decoration: none;
 }
 
-.cover__link:before {
-  background-image: url(./../../../images/cover-trains.jpg);
-  background-size: cover;
-  background-position: center;
-  opacity: 0.8;
-  transition: opacity 0.3s ease;
+.cover__link::before {
+  background-color: #2a2c2f;
   content: '';
+  transition: opacity 1s ease;
+  opacity: 0.3;
   position: absolute;
   z-index: -1;
   left: 0;
@@ -30,7 +30,7 @@
 }
 
 .cover__link:hover::before {
-  opacity: 0.3;
+  opacity: 0.8;
 }
 
 @media screen and (min-width: 1024px) and (max-width: 1279px) {
