--- a/blocks/place/__paragraph/place__paragraph.css
+++ b/blocks/place/__paragraph/place__paragraph.css
@@ -10,18 +10,10 @@
 
 .place__paragraph:first-child {
   padding-top: 0px;
-
-}
-@media screen and (min-width: 1024px) {
-  .place__paragraph {
-    font-size: 18px;
-    line-height: 163%;
-  }
 }
 
-@media screen and (min-width: 320px) {
+@media screen and (max-width: 1023px) {
   .place__paragraph {
     font-size: 16px;
-    line-height: 163%;
   }
 }
